# ZZCC

./: .gitignore  LICENSE  README.md
zzcc/: README.md  dir.txt  l10n.yaml  nuget.config  pubspec.yaml
zzcc/.github/: copilot-instructions.md
zzcc/android/app/: build.gradle
zzcc/ios/Runner/: Info.plist
zzcc/ios/Runner.xcodeproj/: project.pbxproj
zzcc/lib/: main.dart
zzcc/lib/core/di/: service_locator.dart
zzcc/lib/core/routes/: app_router.dart  route_names.dart
zzcc/lib/core/services/: audio_analysis_service.dart  audio_event_handler.dart  config_service.dart  logger_service.dart  net_service.dart  storage_service.dart  torrent_metadata_service.dart  torrent_service.dart
zzcc/lib/core/theme/: app_theme.dart  theme_manager.dart
zzcc/lib/l10n/: app_en.arb  app_es.arb  app_zh.arb  app_zh_Hans.arb  app_zh_Hant.arb
zzcc/linux/: CMakeLists.txt  my_application.cc
zzcc/macos/Runner.xcodeproj/: project.pbxproj
zzcc/test/: widget_test.dart
zzcc/web/: index.html  manifest.json
zzcc/windows/: CMakeLists.txt  copy_dlls.bat  vcpkg.json  zzcc_config.json
zzcc/windows/docs/: DEVELOPER_SETUP.md
zzcc/windows/plugins/udioplayers_windows/windows/: CMakeLists.txt
zzcc/windows/plugins/udioplayers_windows/windows/src/: audio_player.cpp  audio_player.h  audioplayers_windows_plugin.cpp  thread_safe_event_sink.cpp  thread_safe_event_sink.h
zzcc/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  runner.exe.manifest
zzcc/windows/scripts/: build_windows.bat  download_dependencies.ps1  install_webview2.ps1  mirrors.txt  vcpkg_path.txt
(+77 files in other folders)
